# thetadx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  TODO.md  config.default.properties  config.default.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python.yml
crates/tdbe/: Cargo.toml
crates/tdbe/src/: conditions.rs  errors.rs  exchange.rs  lib.rs  sequences.rs
crates/tdbe/src/types/: tick.rs
crates/tdx-encoding/: Cargo.toml  build.rs
crates/tdx-encoding/benches/: bench_enums.rs  bench_fie.rs  bench_fit.rs  bench_framing.rs  bench_price.rs  bench_protocol.rs  bench_tick.rs
crates/tdx-encoding/src/: error.rs  lib.rs
crates/tdx-encoding/src/codec/: fie.rs
crates/tdx-encoding/src/protocol/: framing.rs  mod.rs
crates/tdx-encoding/src/types/: enums.rs  price.rs
crates/thetadatadx/: Cargo.toml  build.rs  endpoint_schema.toml
crates/thetadatadx-cli/: Cargo.toml  README.md
crates/thetadatadx-cli/src/: main.rs
crates/thetadatadx/benches/: README.md  bench.rs  bench_auth.rs  bench_decode.rs  bench_enums.rs  bench_fie.rs  bench_fit.rs  bench_framing.rs  bench_greeks.rs  bench_price.rs  bench_protocol.rs  bench_tick.rs
crates/thetadatadx/proto/: MAINTENANCE.md  endpoints.proto
crates/thetadatadx/src/: config.rs  decode.rs  direct.rs  error.rs  greeks.rs  lib.rs  options.rs  proto_ext.rs  unified.rs
crates/thetadatadx/src/auth/: nexus.rs
crates/thetadatadx/src/codec/: fit.rs  mod.rs
crates/thetadatadx/src/fpss/: connection.rs  framing.rs  mod.rs  protocol.rs  ring.rs
crates/thetadatadx/src/types/: mod.rs  price.rs  tick.rs
docs/: api-reference.md  architecture.md  endpoint-schema.md  jvm-deviations.md  macro-guide.md  reverse-engineering.md
docs-site/book/: 404.html  changelog.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-d9431649.js
docs-site/book/cpp/: api-reference.html  getting-started.html  historical.html  streaming.html
docs-site/book/go/: api-reference.html  getting-started.html  historical.html  streaming.html
docs-site/book/python/: api-reference.html  getting-started.html  historical.html  notebooks.html  options.html  streaming.html
docs-site/book/rust/: api-reference.html  configuration.html  getting-started.html  historical.html  options.html  streaming.html
docs-site/book/tools/: cli.html  mcp.html  server.html
docs-site/docs/: api-reference.md  changelog.md  getting-started.md  index.md  options.md  streaming.md
docs-site/docs/.vitepress/: config.ts
docs-site/docs/.vitepress/theme/: index.ts
docs-site/docs/.vitepress/theme/components/: LanguageSelector.vue  QueryBuilder.vue  TierBadge.vue
docs-site/docs/getting-started/: index.md  installation.md  quickstart.md  subscriptions.md
docs-site/docs/historical/: option.md
docs-site/docs/historical/calendar/: on-date.md  open-today.md  year.md
docs-site/docs/historical/index-data/at-time/: price.md
docs-site/docs/historical/index-data/history/: eod.md  ohlc.md  price.md
docs-site/docs/historical/index-data/list/: dates.md  symbols.md
docs-site/docs/historical/index-data/snapshot/: market-value.md  ohlc.md  price.md
docs-site/docs/historical/option/: index.md
docs-site/docs/historical/option/at-time/: ohlc.md  trade.md
docs-site/docs/historical/option/history/: eod.md  greeks-all.md  greeks-eod.md  greeks-first-order.md  greeks-iv.md  greeks-second-order.md  greeks-third-order.md  ohlc.md  open-interest.md  quote.md  trade-greeks-all.md  trade-greeks-first-order.md  trade-greeks-iv.md  trade-greeks-second-order.md  trade-greeks-third-order.md  trade-quote.md  trade.md
docs-site/docs/historical/option/list/: contracts.md  dates.md  expirations.md  roots.md  strikes.md
docs-site/docs/historical/option/snapshot/: greeks-all.md  greeks-first-order.md  greeks-iv.md  greeks-second-order.md  greeks-third-order.md  ohlc.md  open-interest.md  quote.md  trade.md
docs-site/docs/historical/rate/: eod.md
docs-site/docs/historical/stock/at-time/: quote.md  trade.md
docs-site/docs/historical/stock/history/: eod.md  ohlc.md  quote.md  trade-quote.md  trade.md
docs-site/docs/historical/stock/list/: dates.md  symbols.md
docs-site/docs/historical/stock/snapshot/: market-value.md  ohlc.md  quote.md  trade.md
docs-site/docs/streaming/: events.md  latency.md  reconnection.md
docs-site/public/: thetadatadx.yaml
docs-site/src/: introduction.md
docs-site/src/cpp/: api-reference.md  streaming.md
docs-site/src/getting-started/: installation.md
docs-site/src/go/: api-reference.md  streaming.md
docs-site/src/python/: api-reference.md  getting-started.md  historical.md  notebooks.md  options.md  streaming.md
docs-site/src/rust/: api-reference.md  getting-started.md  historical.md  streaming.md
examples/: test_intervals.rs
ffi/: Cargo.toml  README.md
ffi/src/: lib.rs
notebooks/: 101_getting_started.ipynb  102_historical_analysis.ipynb  103_options_chain.ipynb  104_greeks_surface.ipynb  105_realtime_streaming.ipynb  106_live_option_chain.ipynb  107_full_trade_stream.ipynb  README.md
notebooks/live-chain/: app.py
sdks/: README.md
sdks/cpp/: README.md
sdks/cpp/examples/: main.cpp
sdks/cpp/include/: thetadx.h  thetadx.hpp
sdks/cpp/src/: thetadx.cpp
sdks/go/: README.md  client.go  fpss.go  thetadx.go
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/examples/: historical.py
sdks/python/src/: lib.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: main.rs
tools/live-chain/: README.md  app.py  requirements.txt
tools/mcp/: Cargo.toml  README.md
tools/mcp/src/: main.rs
tools/server/: Cargo.toml  README.md
tools/server/src/: format.rs  handler.rs  main.rs  router.rs  state.rs  ws.rs
