[package]
name = "thetadatadx-ffi"
version = "3.2.1"
edition = "2021"
description = "C FFI layer for thetadatadx — used by Go and C++ SDKs"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
thetadatadx = { path = "../crates/thetadatadx" }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
serde_json = "1.0.149"
