[package]
name = "thetadatadx-ffi"
version = "5.0.2"
edition = "2021"
description = "C FFI layer for thetadatadx — used by Go and C++ SDKs"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
thetadatadx = { path = "../crates/thetadatadx" }
tdbe = { version = "0.1.0", path = "../crates/tdbe" }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
