[package]
name = "thetadatadx-cli"
version = "1.2.4"
edition = "2021"
description = "CLI for ThetaDataDx — query ThetaData from your terminal"
license = "GPL-3.0-or-later"

[[bin]]
name = "tdx"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../thetadatadx" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
comfy-table = "7"
