[package]
name = "thetadatadx-py"
version = "3.2.1"
edition = "2021"
description = "Python bindings for thetadatadx — native ThetaData SDK powered by Rust"

[lib]
name = "thetadatadx"
crate-type = ["cdylib"]

[dependencies]
# The Rust SDK we're wrapping
thetadatadx = { path = "../../crates/thetadatadx" }

# PyO3 bindings
pyo3 = { version = "=0.28.2", features = ["extension-module"] }

# Async bridge: run tokio futures from sync Python
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
