[package]
name = "thetadatadx-cli"
version = "5.3.1"
edition = "2021"
description = "CLI for ThetaDataDx — query ThetaData from your terminal"
license = "GPL-3.0-or-later"

[[bin]]
name = "tdx"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tdbe = { version = "0.5.0", path = "../../crates/tdbe" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sonic-rs = "0.3"
comfy-table = "7"
