[package]
name = "thetadatadx-mcp"
version = "3.2.1"
edition = "2021"
description = "MCP server for ThetaDataDx — gives LLMs instant access to ThetaData market data"
license = "GPL-3.0-or-later"
repository = "https://github.com/userFRM/ThetaDataDx"

[[bin]]
name = "thetadatadx-mcp"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
